--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,6 +27,8 @@
       >
     </li>
     <li style="padding-top: 3px; margin-right: 50px">
+      <!-- *ngIf="authService.isAuthenticaded()" -->
+
       <a class="drop"> UserName</a>
       <ul>
         <li>
