--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,11 @@
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
+
 <body id="top">
   <div
-    class="wrapper bgded overlay"
+    class="wrapper bgded overlay "
     style="
       background-image: url('https://c.pxhere.com/photos/09/1d/library_books_education_literature_school_knowledge_study_read-706593.jpg!d');
-    "
-  >
+
+    ">
     <div id="pageintro" class="hoc clear">
       <article style="margin-left: 100px" class="introtxt">
         <h2 class="heading" style="color: aliceblue">Book Inventory</h2>
@@ -28,24 +25,16 @@
     </div>
   </div>
   <br />
-  <div class="row" style="background-color: #e9f1fc">
-    <!-- <div class="wrapper"> -->
-    <div class="col">
+  <div class="img-books">
       <div class="nospace elements clear">
-        <div class="row">
-          <img
-            src="assets\community-books-header.jpg"
-            style="margin-bottom: 10px"
-          />
-          <!-- <div
-              style="margin-left: 600px; margin-bottom: 50px; margin-top: -50px"
-              class="center btmspace-80"
-            >
-              <h2 class="heading font-x3">-- New Books --</h2>
-            </div> -->
-        </div>
-        <div class="row">
-          <mat-card style="margin-left: 200px" class="example-card">
+          <div class="col-12">
+            <div class="world-book block-heading-1">
+
+              <h2>The World Of Books </h2>
+            </div>
+          </div>
+        <div class="example-books">
+          <mat-card class="example-card">
             <div class="col">
               <figure>
                 <img mat-card-image [src]="data[1].image" />
@@ -151,7 +140,6 @@
           </mat-card>
         </div>
       </div>
-    </div>
   </div>
 
   <div class="scroll-to-top">
