--- a/src/app/book/book-form/book-form.component.css
+++ b/src/app/book/book-form/book-form.component.css
@@ -11,11 +11,13 @@ body {
 }
 
 .sidenav {
+  display: flex;
+  justify-content: center;
+  align-content: center;
   height: auto;
-  margin-top: 10%;
+  margin-top: 9.4%;
   background-color: #252b34;
   overflow-x: hidden;
-  padding-top: 20px;
 }
 
 .main {
@@ -45,7 +47,7 @@ body {
 
   .sidenav {
     width: 35%;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     top: 0;
     left: 0;
