--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,27 @@
 .example-card {
   max-width: 250px;
   max-height: 450px;
-  margin-right: 20px;
-  margin-left: 40px;
-  margin-bottom: 20px;
+  /*margin-right: 20px;*/
+  /*margin-left: 40px;*/
+  /*margin-bottom: 20px;*/
 }
+.example-books{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px 20px;
+}
+.img-books{
+  background: -webkit-linear-gradient(to left, #b8b298, #deac78);
+  background: linear-gradient(to left, #b29f94, #9c7364);
 
+}
+.world-book{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  color: white; font-family: 'Trocchi', serif; font-size: 50px; font-weight: normal; line-height: 48px; margin: 0;
+}
 /* Top Bar
 --------------------------------------------------------------------------------------------------------------- */
 #topbar {
