--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -48,7 +48,7 @@
                 <a
                   mat-button
                   [routerLink]="['/book/', dataB.id]"
-                  (click)="openDialog()"
+                  (click)="openDialog(dataB.id)"
                   class="btn btn-primary btn-block"
                 >
                   View More
