--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,14 +22,13 @@
       <a class="nav-link" routerLink="/login" style="color: #82b440">Log In</a>
     </li>
     <li class="nav-item" style="padding-top: 3px">
-      <a class="nav-link" routerLink="/signup" style="color: aliceblue"
+      <a class="nav-link" routerLink="/register" style="color: aliceblue"
         >Register</a
       >
     </li>
-    <li style="padding-top: 3px; margin-right: 50px">
-      <!-- *ngIf="authService.isAuthenticaded()" -->
+    <li style="padding-top: 3px; margin-right: 50px" *ngIf="isAuth()">
 
-      <a class="drop"> UserName</a>
+      <a style="cursor: pointer" class="drop">Hi, {{ login.userName() | uppercase}}</a>
       <ul>
         <li>
           <a
@@ -40,7 +39,7 @@
           >
         </li>
         <li>
-          <a class="dropdown-item" (click)="logout()">Log Out</a>
+          <a class="dropdown-item" style="cursor: pointer"  (click)="logout()">Log Out</a>
         </li>
       </ul>
     </li>
