--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,9 @@
 
 <body id="top">
   <div
-    class="wrapper bgded overlay "
-    style="
-      background-image: url('https://c.pxhere.com/photos/09/1d/library_books_education_literature_school_knowledge_study_read-706593.jpg!d');
-
-    ">
+    class="wrapper bgded overlay imgbg"
+    >
+    <div style="backdrop-filter: blur(1px);height: 99%;">
     <div id="pageintro" class="hoc clear">
       <article style="margin-left: 100px" class="introtxt">
         <h2 class="heading" style="color: aliceblue">Book Inventory</h2>
@@ -14,7 +12,6 @@
           <div class="nospace inline pushright">
             <button
               class="btn btn-primary"
-              style="margin-left: 20px"
               routerLink='/book'
             >
               Books
@@ -23,6 +20,7 @@
         </footer>
       </article>
     </div>
+  </div>
   </div>
   <br />
   <div class="img-books">
