--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,15 +5,20 @@
   /*margin-left: 40px;*/
   /*margin-bottom: 20px;*/
 }
+.imgbg{
+  background: url(src/assets/library.jpg);
+  height: 56%;
+ 
+}
 .example-books{
   display: flex;
   justify-content: space-evenly;
   padding: 20px 20px;
 }
 .img-books{
-  background: -webkit-linear-gradient(to left, #b8b298, #deac78);
-  background: linear-gradient(to left, #b29f94, #9c7364);
-
+  /* background: -webkit-linear-gradient(to left, #b8b298, #deac78); */
+  background: linear-gradient(180deg, rgba(37,43,52,1) 54%, rgba(57,66,80,1) 84%, rgba(79,93,113,1) 100%);
+  height: 42%;
 }
 mat-card-actions a:focus{
   background: unset;
@@ -592,7 +597,7 @@ td {
 }
 body {
   color: #888888;
-  background-color: black;
+  background-color: #252b34;
 }
 a {
   color: #82b440;
@@ -844,6 +849,7 @@ table a,
 @media screen and (min-width: 978px) {
   .hoc {
     max-width: 978px;
+   
   }
 }
 
@@ -852,6 +858,7 @@ table a,
 @media screen and (max-width: 900px) {
   .hoc {
     max-width: 90%;
+   
   }
 
   #topbar {
